# billiards-api

./: .dockerignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  settings.py
src/app/billiard/: binders.py  filters.py  services.py
src/app/billiard/queries/: get_club_detail.py  get_clubs.py  get_clubs_count.py
src/app/billiard/schemes/: response.py
src/app/booking/: filters.py
src/app/booking/commands/: reservation_table.py
src/app/booking/schemes/: request.py  response.py
src/app/schedule/: filters.py
src/cli/: init_bucket.py  init_schedules.py
src/core/: controllers.py  di.py  docs.py  enums.py  errors.py
src/core/binders/: __init__.py  paginations.py
src/core/exceptions/: base.py  billiards.py  bookings.py  schedules.py
src/core/filters/: filter_model.py  sqlalchemy.py
src/core/interfaces/: __init__.py
src/core/interfaces/commands/: bookings.py
src/core/interfaces/queries/: billiards.py
src/core/interfaces/repositories/: __init__.py  (+4 more)
src/core/schemes/: __init__.py  paginations.py
src/core/templates/: __init__.py  configure.py  decorators.py  filters.py
src/core/use_cases/: billiard_schedule_on_day.py  club_closing_time.py  club_opening_time.py  current_club_schedule.py  is_work_billiard_club_now.py  schedule_commons.py
src/core/utils/: arrays.py  datetime_utils.py
src/core/validators/: bookngs.py  club_schedules.py
src/infrastructure/database/: connections.py  context.py
src/infrastructure/migrations/: env.py
src/infrastructure/repositories/: __init__.py  billiards.py  bookings.py  schedules.py
src/presentation/: __init__.py
src/presentation/html/: html_view.py
src/presentation/rest/: __init__.py  api_controller.py
src/static/templates/: index.jinja  layout.jinja
(+35 files in other folders)
