[project]
name = "billiards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "blacksheep>=2.3.0",
    "blacksheep-cli>=0.0.5",
    "essentials-configuration[full]>=2.0.4",
    "markupsafe>=3.0.2",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 100
show-fixes = true
unsafe-fixes = true
target-version = "py310"

select = [
    "A",
    "E",
    "F",
    "ISC",
    "I",
    "N",
    "PIE",
    "T20",
    "RET",
    "SLF",
    "SIM",
    "ARG",
    "ERA",
    "PL",
]
ignore = [
    "SIM117",
    "N812",
]
exclude = [
    "migrations",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = 80

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
case-sensitive = true
force-sort-within-sections = true
lines-after-imports = 2
relative-imports-order = "closest-to-furthest"
known-first-party = ["app", "core", "infrastructure", "presentation", "settings"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
disallow_untyped_calls = true
allow_redefinition = false
strict_equality = true
show_column_numbers = true
pretty = true
mypy_path = "src/"
exclude = [
    "migrations"
]
